# PicoQuake

./: .gitignore  404.html  README.md  example.toml  how_to_proto.txt  index.html  messages_pb2.py  mkdocs.yml  objects.inv  platformio.ini  read.py
.github/workflows/: ci.yml  docs.yml  test.yml
acquisition_data/: index.html
cli/: index.html
docs/: CNAME  acquisition_data.md  cli.md  examples.md  fw_update.md  getting_started.md  index.md  installation.md  plotting.md  specs.md  usage.md
docs/examples/: bldc.md  trackpad.md
docs/overrides/: home.html  main.html
docs/python_api/: data.md  examples.md  exceptions.md  interface.md
examples/bldc/: index.html
examples/trackpad/: index.html
firmware/: .gitignore  platformio.ini
firmware/boards/: picoquake.json
firmware/include/: ICM42688P.h  ICM42688P_filter_config.h
firmware/src/: ICM42688P.cpp  main.cpp
firmware/src/msg/: messages.pb.c  messages.pb.h
fw_update/: index.html
getting_started/: index.html
include/: ICM42688P.h  ICM42688P_filter_config.h
msg/: messages.proto
overrides/: home.html
plotting/: index.html
python/: .gitignore  README.md  pyproject.toml  read.py  readme.txt  requirements.txt  setup.py
python/examples/: acquire.py  continuous.py  trigger.py  trigger_loop.py
python/msg/: messages_pb2.py
python/picoquake/: __init__.py  __main__.py  analisys.py  cli.py  configuration.py  data.py  exceptions.py  interface.py  plot.py  read.py  utils.py
python/picoquake/msg/: messages_pb2.py  nanopb_pb2.py
python/test/: test_analysis.py  test_data.py  test_utils.py
python_api/data/: index.html
python_api/examples/: index.html
python_api/exceptions/: index.html
python_api/interface/: index.html
sample_data/: car_vibration.csv
search/: search_index.json
specs/: index.html
src/: ICM42688P.cpp  main.cpp
src/msg/: messages.pb.c  messages.pb.h  messages.proto
stylesheets/: extra.css
usage/: index.html
