[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picoquake"
version = "1.2.0"  # change also in picoquake/__init__.py
description = "PicoQuake USB vibration sensor library."
requires-python = ">=3.9"
readme = "README.md"
authors = [
    { name = "Nejc Planinsek", email = "nejc@plab.si" }
]
keywords = [
    "picoquake",
    "vibration",
    "data acquisition",
    "IMU",
    "accelerometer",
    "gyroscope"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pyserial~=3.5",
    "protobuf~=6.31",
    "cobs~=1.2",
    "tomli ~= 1.1 ; python_version < '3.11'"
]

[project.optional-dependencies]
plot = [
    "numpy~=2.0",
    "scipy~=1.13",
    "matplotlib~=3.9"
]
test = [
    "numpy~=2.0",
    "scipy~=1.13",
    "matplotlib~=3.9",
    "pytest~=8.4"
]

[project.urls]
Repository = "https://github.com/PLab-SI/PicoQuake"
Documentation = "https://plab-si.github.io/PicoQuake/"

[project.scripts]
picoquake = "picoquake.cli:main"
